# deepresearch

./: CLAUDE.md  pyproject.toml
src/deepresearch/: agent.py  app.py  config.py
workspaces/49b65705-4300-4795-8b9a-306ce20018b1/: events.jsonl  history.json  meta.json
workspaces/51dda135-b56a-49f0-973f-9814d895398c/: events.jsonl  history.json  meta.json
workspaces/51dda135-b56a-49f0-973f-9814d895398c/workspace/: report.md
workspaces/763605a6-5162-4912-b66a-a4e32cb16cd2/: events.jsonl  history.json  meta.json
workspaces/8701018a-7609-460a-8b1d-7da55b0940ac/: events.jsonl
workspaces/fa1132cd-34db-4576-aa0c-9ea7c6e8b923/: events.jsonl  history.json  meta.json
workspaces/fa1132cd-34db-4576-aa0c-9ea7c6e8b923/workspace/: report.md
