[project]
name = "deepresearch"
version = "0.1.1"
description = "Autonomous research agent powered by pydantic-deep + MCP"
requires-python = ">=3.12"
dependencies = [
    "pydantic-deep[web]",
    "pydantic-ai-slim[mcp,duckduckgo,openai]",
    "pydantic-ai-shields",
    "pydantic-ai-backend[docker]",
    "summarization-pydantic-ai",
    "subagents-pydantic-ai",
    "pydantic-ai-todo",
    "python-dotenv>=1.0",
    "markdown>=3.5",
    "uvicorn[standard]",
    "pytz>=2026.2",
]

[project.optional-dependencies]
export = ["markdown>=3.5", "weasyprint>=60.0"]


[project.scripts]
deepresearch = "deepresearch.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepresearch"]
